--- a/.github/workflows/hotfix-sync.yml
+++ b/.github/workflows/hotfix-sync.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN }}
       
       - name: Configure Git
         run: |
@@ -63,4 +63,5 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "- DEV: ${{ steps.merge-dev.outcome }}" >> $GITHUB_STEP_SUMMARY
           echo "- TEST: ${{ steps.merge-test.outcome }}" >> $GITHUB_STEP_SUMMARY
+
           echo "- UAT: ${{ steps.merge-uat.outcome }}" >> $GITHUB_STEP_SUMMARY
