--- a/.github/workflows/hotfix-sync.yml
+++ b/.github/workflows/hotfix-sync.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.PAT_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN }} #Add secret to repo
       
       - name: Configure Git
         run: |
@@ -29,42 +29,216 @@ jobs:
         run: |
           echo "hotfix_branch=${{ github.event.pull_request.head.ref }}" >> $GITHUB_OUTPUT
           echo "merge_sha=${{ github.event.pull_request.merge_commit_sha }}" >> $GITHUB_OUTPUT
+          echo "pr_number=${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
+          echo "timestamp=$(date +%s)" >> $GITHUB_OUTPUT
       
-      - name: Merge hotfix to DEV
-        run: |
-          git fetch origin DEV
-          git checkout DEV
-          git merge ${{ steps.get-info.outputs.merge_sha }} --no-ff -m "Merge ${{ steps.get-branch.outputs.hotfix_branch }} to DEV"
-          git push origin DEV
+      - name: Create PR for DEV
+        id: pr-dev
+        uses: actions/github-script@v7
         continue-on-error: true
-        id: merge-dev
+        with:
+          github-token: ${{ secrets.PAT_TOKEN }}
+          script: |
+            const branchName = `sync-hotfix-to-dev-${{ steps.get-info.outputs.timestamp }}`;
+            
+            // Create branch from merge commit
+            await github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: `refs/heads/${branchName}`,
+              sha: '${{ steps.get-info.outputs.merge_sha }}'
+            });
+            
+            // Merge DEV into the new branch to prepare for PR
+            try {
+              await github.rest.repos.merge({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                base: branchName,
+                head: 'DEV',
+                commit_message: 'Merge DEV to prepare for hotfix sync'
+              });
+            } catch (error) {
+              console.log('No merge needed or conflict - proceeding with PR');
+            }
+            
+            // Create pull request
+            const pr = await github.rest.pulls.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: `Sync hotfix ${{ steps.get-info.outputs.hotfix_branch }} to DEV`,
+              body: `Automated sync of hotfix from PROD to DEV\n\nOriginal PR: #${{ steps.get-info.outputs.pr_number }}\nHotfix branch: ${{ steps.get-info.outputs.hotfix_branch }}`,
+              head: branchName,
+              base: 'DEV'
+            });
+            
+            core.setOutput('pr_number', pr.data.number);
+            core.setOutput('pr_url', pr.data.html_url);
+            
+            // Enable auto-merge if all checks pass
+            try {
+              await github.rest.pulls.merge({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: pr.data.number,
+                merge_method: 'merge'
+              });
+              core.setOutput('auto_merged', 'true');
+            } catch (error) {
+              // PR has required checks, will need to wait for them
+              console.log('PR created, waiting for required checks to pass');
+              core.setOutput('auto_merged', 'false');
+            }
+            
+            return pr.data.number;
       
-      - name: Merge hotfix to TEST
-        run: |
-          git fetch origin TEST
-          git checkout TEST
-          git merge ${{ steps.get-info.outputs.merge_sha }} --no-ff -m "Merge ${{ steps.get-branch.outputs.hotfix_branch }} to TEST"
-          git push origin TEST
+      - name: Create PR for TEST
+        id: pr-test
+        uses: actions/github-script@v7
         continue-on-error: true
-        id: merge-test
+        with:
+          github-token: ${{ secrets.PAT_TOKEN }}
+          script: |
+            const branchName = `sync-hotfix-to-test-${{ steps.get-info.outputs.timestamp }}`;
+            
+            await github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: `refs/heads/${branchName}`,
+              sha: '${{ steps.get-info.outputs.merge_sha }}'
+            });
+            
+            try {
+              await github.rest.repos.merge({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                base: branchName,
+                head: 'TEST',
+                commit_message: 'Merge TEST to prepare for hotfix sync'
+              });
+            } catch (error) {
+              console.log('No merge needed or conflict - proceeding with PR');
+            }
+            
+            const pr = await github.rest.pulls.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: `Sync hotfix ${{ steps.get-info.outputs.hotfix_branch }} to TEST`,
+              body: `Automated sync of hotfix from PROD to TEST\n\nOriginal PR: #${{ steps.get-info.outputs.pr_number }}\nHotfix branch: ${{ steps.get-info.outputs.hotfix_branch }}`,
+              head: branchName,
+              base: 'TEST'
+            });
+            
+            core.setOutput('pr_number', pr.data.number);
+            core.setOutput('pr_url', pr.data.html_url);
+            
+            try {
+              await github.rest.pulls.merge({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: pr.data.number,
+                merge_method: 'merge'
+              });
+              core.setOutput('auto_merged', 'true');
+            } catch (error) {
+              console.log('PR created, waiting for required checks to pass');
+              core.setOutput('auto_merged', 'false');
+            }
+            
+            return pr.data.number;
       
-      - name: Merge hotfix to UAT
-        run: |
-          git fetch origin UAT
-          git checkout UAT
-          git merge ${{ steps.get-branch.outputs.hotfix_branch.merge_sha }} --no-ff -m "Merge ${{ steps.get-branch.outputs.hotfix_branch }} to UAT"
-          git push origin UAT
+      - name: Create PR for UAT
+        id: pr-uat
+        uses: actions/github-script@v7
         continue-on-error: true
-        id: merge-uat
+        with:
+          github-token: ${{ secrets.PAT_TOKEN }}
+          script: |
+            const branchName = `sync-hotfix-to-uat-${{ steps.get-info.outputs.timestamp }}`;
+            
+            await github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: `refs/heads/${branchName}`,
+              sha: '${{ steps.get-info.outputs.merge_sha }}'
+            });
+            
+            try {
+              await github.rest.repos.merge({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                base: branchName,
+                head: 'UAT',
+                commit_message: 'Merge UAT to prepare for hotfix sync'
+              });
+            } catch (error) {
+              console.log('No merge needed or conflict - proceeding with PR');
+            }
+            
+            const pr = await github.rest.pulls.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: `Sync hotfix ${{ steps.get-info.outputs.hotfix_branch }} to UAT`,
+              body: `Automated sync of hotfix from PROD to UAT\n\nOriginal PR: #${{ steps.get-info.outputs.pr_number }}\nHotfix branch: ${{ steps.get-info.outputs.hotfix_branch }}`,
+              head: branchName,
+              base: 'UAT'
+            });
+            
+            core.setOutput('pr_number', pr.data.number);
+            core.setOutput('pr_url', pr.data.html_url);
+            
+            try {
+              await github.rest.pulls.merge({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: pr.data.number,
+                merge_method: 'merge'
+              });
+              core.setOutput('auto_merged', 'true');
+            } catch (error) {
+              console.log('PR created, waiting for required checks to pass');
+              core.setOutput('auto_merged', 'false');
+            }
+            
+            return pr.data.number;
       
-      - name: Report merge status
+      - name: Report PR creation status
         if: always()
         run: |
-          echo "## Hotfix Sync Results" >> $GITHUB_STEP_SUMMARY
-          echo "Hotfix branch: ${{ steps.get-branch.outputs.hotfix_branch }}" >> $GITHUB_STEP_SUMMARY
-          echo "Merge commit: ${{ steps.get-info.outputs.merge_sha }}" >> $GITHUB_STEP_SUMMARY
+          echo "## Hotfix Sync PRs Created" >> $GITHUB_STEP_SUMMARY
+          echo "Hotfix branch: ${{ steps.get-info.outputs.hotfix_branch }}" >> $GITHUB_STEP_SUMMARY
+          echo "Original PR: #${{ steps.get-info.outputs.pr_number }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "- DEV: ${{ steps.merge-dev.outcome }}" >> $GITHUB_STEP_SUMMARY
-          echo "- TEST: ${{ steps.merge-test.outcome }}" >> $GITHUB_STEP_SUMMARY
-          echo "- UAT: ${{ steps.merge-uat.outcome }}" >> $GITHUB_STEP_SUMMARY
-
+          
+          if [ "${{ steps.pr-dev.outcome }}" == "success" ]; then
+            echo "✅ DEV: PR #${{ steps.pr-dev.outputs.pr_number }} - ${{ steps.pr-dev.outputs.pr_url }}" >> $GITHUB_STEP_SUMMARY
+            if [ "${{ steps.pr-dev.outputs.auto_merged }}" == "true" ]; then
+              echo "    Auto-merged successfully" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "    Waiting for required checks to pass" >> $GITHUB_STEP_SUMMARY
+            fi
+          else
+            echo "❌ DEV: Failed to create PR" >> $GITHUB_STEP_SUMMARY
+          fi
+          
+          if [ "${{ steps.pr-test.outcome }}" == "success" ]; then
+            echo "✅ TEST: PR #${{ steps.pr-test.outputs.pr_number }} - ${{ steps.pr-test.outputs.pr_url }}" >> $GITHUB_STEP_SUMMARY
+            if [ "${{ steps.pr-test.outputs.auto_merged }}" == "true" ]; then
+              echo "    Auto-merged successfully" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "    Waiting for required checks to pass" >> $GITHUB_STEP_SUMMARY
+            fi
+          else
+            echo "❌ TEST: Failed to create PR" >> $GITHUB_STEP_SUMMARY
+          fi
+          
+          if [ "${{ steps.pr-uat.outcome }}" == "success" ]; then
+            echo "✅ UAT: PR #${{ steps.pr-uat.outputs.pr_number }} - ${{ steps.pr-uat.outputs.pr_url }}" >> $GITHUB_STEP_SUMMARY
+            if [ "${{ steps.pr-uat.outputs.auto_merged }}" == "true" ]; then
+              echo "    Auto-merged successfully" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "    Waiting for required checks to pass" >> $GITHUB_STEP_SUMMARY
+            fi
+          else
+            echo "❌ UAT: Failed to create PR" >> $GITHUB_STEP_SUMMARY
+          fi
