--- a/.github/workflows/hotfix-sync.yml
+++ b/.github/workflows/hotfix-sync.yml
@@ -48,19 +48,6 @@ jobs:
               sha: '${{ steps.get-info.outputs.merge_sha }}'
             });
             
-            // Merge DEV into the new branch to prepare for PR
-            try {
-              await github.rest.repos.merge({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                base: branchName,
-                head: 'DEV',
-                commit_message: 'Merge DEV to prepare for hotfix sync'
-              });
-            } catch (error) {
-              console.log('No merge needed or conflict - proceeding with PR');
-            }
-            
             // Create pull request
             const pr = await github.rest.pulls.create({
               owner: context.repo.owner,
@@ -107,18 +94,6 @@ jobs:
               sha: '${{ steps.get-info.outputs.merge_sha }}'
             });
             
-            try {
-              await github.rest.repos.merge({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                base: branchName,
-                head: 'TEST',
-                commit_message: 'Merge TEST to prepare for hotfix sync'
-              });
-            } catch (error) {
-              console.log('No merge needed or conflict - proceeding with PR');
-            }
-            
             const pr = await github.rest.pulls.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -162,18 +137,6 @@ jobs:
               sha: '${{ steps.get-info.outputs.merge_sha }}'
             });
             
-            try {
-              await github.rest.repos.merge({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                base: branchName,
-                head: 'UAT',
-                commit_message: 'Merge UAT to prepare for hotfix sync'
-              });
-            } catch (error) {
-              console.log('No merge needed or conflict - proceeding with PR');
-            }
-            
             const pr = await github.rest.pulls.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -210,7 +173,7 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           
           if [ "${{ steps.pr-dev.outcome }}" == "success" ]; then
-            echo "✅ DEV: PR #${{ steps.pr-dev.outputs.pr_number }} - ${{ steps.pr-dev.outputs.pr_url }} - ${{ context.repo.owner }} - ${{ context.repo.repo }}" >> $GITHUB_STEP_SUMMARY
+            echo "✅ DEV: PR #${{ steps.pr-dev.outputs.pr_number }} - ${{ steps.pr-dev.outputs.pr_url }}" >> $GITHUB_STEP_SUMMARY
             if [ "${{ steps.pr-dev.outputs.auto_merged }}" == "true" ]; then
               echo "    Auto-merged successfully" >> $GITHUB_STEP_SUMMARY
             else
