--- a/.github/workflows/hotfix-sync.yml
+++ b/.github/workflows/hotfix-sync.yml
@@ -38,15 +38,6 @@ jobs:
         with:
           github-token: ${{ secrets.PAT_TOKEN }}
           script: |
-            const branchName = `hotfix/sync-hotfix-to-dev`;
-            
-            // Create branch from merge commit
-            await github.rest.git.createRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: `refs/heads/${branchName}`,
-              sha: '${{ steps.get-info.outputs.merge_sha }}'
-            });
             
             // Create pull request
             const pr = await github.rest.pulls.create({
@@ -54,7 +45,7 @@ jobs:
               repo: context.repo.repo,
               title: `Sync ${{ steps.get-info.outputs.hotfix_branch }} to DEV`,
               body: `Automated sync of hotfix from PROD to DEV\n\nOriginal PR: #${{ steps.get-info.outputs.pr_number }}\n\nHotfix branch: ${{ steps.get-info.outputs.hotfix_branch }}`,
-              head: branchName,
+              head: steps.get-info.outputs.hotfix_branch,
               base: 'DEV'
             });
             
