--- a/.github/workflows/hotfix-sync.yml
+++ b/.github/workflows/hotfix-sync.yml
@@ -38,28 +38,6 @@ jobs:
         with:
           github-token: ${{ secrets.PAT_TOKEN }}
           script: |
-            const branchName = `hotfix/sync-hotfix-to-dev`;
-            
-            // Create branch from merge commit
-            await github.rest.git.createRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: `refs/heads/${branchName}`,
-              sha: '${{ steps.get-info.outputs.merge_sha }}'
-            });
-            
-            // Merge DEV into the new branch to prepare for PR
-            try {
-              await github.rest.repos.merge({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                base: branchName,
-                head: 'DEV',
-                commit_message: 'Merge DEV to prepare for hotfix sync'
-              });
-            } catch (error) {
-              console.log('No merge needed or conflict - proceeding with PR');
-            }
             
             // Create pull request
             const pr = await github.rest.pulls.create({
@@ -67,7 +45,7 @@ jobs:
               repo: context.repo.repo,
               title: `Sync ${{ steps.get-info.outputs.hotfix_branch }} to DEV`,
               body: `Automated sync of hotfix from PROD to DEV\n\nOriginal PR: #${{ steps.get-info.outputs.pr_number }}\n\nHotfix branch: ${{ steps.get-info.outputs.hotfix_branch }}`,
-              head: branchName,
+              head: ${{ steps.get-info.outputs.hotfix_branch }},
               base: 'DEV'
             });
             
@@ -106,18 +84,6 @@ jobs:
               ref: `refs/heads/${branchName}`,
               sha: '${{ steps.get-info.outputs.merge_sha }}'
             });
-            
-            try {
-              await github.rest.repos.merge({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                base: branchName,
-                head: 'TEST',
-                commit_message: 'Merge TEST to prepare for hotfix sync'
-              });
-            } catch (error) {
-              console.log('No merge needed or conflict - proceeding with PR');
-            }
             
             const pr = await github.rest.pulls.create({
               owner: context.repo.owner,
@@ -161,18 +127,6 @@ jobs:
               ref: `refs/heads/${branchName}`,
               sha: '${{ steps.get-info.outputs.merge_sha }}'
             });
-            
-            try {
-              await github.rest.repos.merge({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                base: branchName,
-                head: 'UAT',
-                commit_message: 'Merge UAT to prepare for hotfix sync'
-              });
-            } catch (error) {
-              console.log('No merge needed or conflict - proceeding with PR');
-            }
             
             const pr = await github.rest.pulls.create({
               owner: context.repo.owner,
