--- a/.github/workflows/hotfix-sync.yml
+++ b/.github/workflows/hotfix-sync.yml
@@ -13,11 +13,18 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Generate token
+        id: generate-token
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ secrets.APP_ID }}
+          private_key: ${{ secrets.APP_PRIVATE_KEY }}
+
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.PAT_TOKEN }} #Add secret to repo
+          token: ${{ steps.generate-token.outputs.token }}
       
       - name: Configure Git
         run: |
@@ -36,7 +43,7 @@ jobs:
         uses: actions/github-script@v7
         continue-on-error: true
         with:
-          github-token: ${{ secrets.PAT_TOKEN }}
+          github-token: ${{ steps.generate-token.outputs.token }}
           script: |
             
             const pr = await github.rest.pulls.create({
@@ -60,7 +67,7 @@ jobs:
         uses: actions/github-script@v7
         continue-on-error: true
         with:
-          github-token: ${{ secrets.PAT_TOKEN }}
+          github-token: ${{ steps.generate-token.outputs.token }}
           script: |
             
             const pr = await github.rest.pulls.create({
@@ -84,7 +91,7 @@ jobs:
         uses: actions/github-script@v7
         continue-on-error: true
         with:
-          github-token: ${{ secrets.PAT_TOKEN }}
+          github-token: ${{ steps.generate-token.outputs.token }}
           script: |
             
             const pr = await github.rest.pulls.create({
@@ -114,17 +121,17 @@ jobs:
           if [ "${{ steps.pr-dev.outcome }}" == "success" ]; then
             echo "✅ DEV: PR #${{ steps.pr-dev.outputs.pr_number }} - ${{ steps.pr-dev.outputs.pr_url }} successfully created." >> $GITHUB_STEP_SUMMARY
           else
-            echo "❌ DEV: Failed to create PR" >> $GITHUB_STEP_SUMMARY
+            echo "❌ DEV: Failed to create PR, hotfix branch might have been deleted." >> $GITHUB_STEP_SUMMARY
           fi
           
           if [ "${{ steps.pr-test.outcome }}" == "success" ]; then
             echo "✅ TEST: PR #${{ steps.pr-test.outputs.pr_number }} - ${{ steps.pr-test.outputs.pr_url }} successfully created." >> $GITHUB_STEP_SUMMARY
           else
-            echo "❌ TEST: Failed to create PR" >> $GITHUB_STEP_SUMMARY
+            echo "❌ TEST: Failed to create PR, hotfix branch might have been deleted." >> $GITHUB_STEP_SUMMARY
           fi
           
           if [ "${{ steps.pr-uat.outcome }}" == "success" ]; then
             echo "✅ UAT: PR #${{ steps.pr-uat.outputs.pr_number }} - ${{ steps.pr-uat.outputs.pr_url }} successfully created." >> $GITHUB_STEP_SUMMARY
           else
-            echo "❌ UAT: Failed to create PR" >> $GITHUB_STEP_SUMMARY
+            echo "❌ UAT: Failed to create PR, hotfix branch might have been deleted." >> $GITHUB_STEP_SUMMARY
           fi
